<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">EducaPlay</string>
    <string name="ImagenNombreEducaPlay">Educa Play</string>
    <string name="ImagenAvionInicio">Avion Inicio</string>
    <string name="btn_estudiante_inicio">Estudiante</string>
    <string name="btn_docente_inicio">Docente</string>
    <string name="txv_inicio">¿Cómo deseas iniciar?</string>
    <string name="txv_iniciar_sesion_usuario">Entrar en mi cuenta</string>
    <string name="btn_iniciar_sesion">Inicia Sesion</string>
    <string name="edt_correo">Introduce tu correo electrónico</string>
    <string name="edt_contraseña">Introduce tu contraseña</string>
    <string name="txv_no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="txv_registrate">Regístrate</string>
    <string name="ImagenBombillo">Imagen Bombillo</string>
    <string name="ImagenCohete">Imagen Cohete</string>
    <string name="txv_registra_tus_datos">¡Registra tus datos!</string>
    <string name="edt_nombre">Introduce tu nombre</string>
    <string name="edt_apellido">Introduce tu apellido</string>
    <string name="edt_documento">Introduce tu documento de identidad</string>
    <string name="btn_registrar_usuario">Registrate</string>
    <string name="txv_quieres_unirte_como_docente">¿Quieres unirte como docente?</string>
    <string name="txv_contactanos">Registrate</string>
    <string name="txv_llena_campos">A continuacion llena los siguientes campos.</string>
    <string name="btn_enviar_datos">Enviar datos</string>
    <string name="edt_el_nombre">Introduce el nombre</string>
    <string name="edt_introduce_el_apellido">Introduce el apellido</string>
    <string name="edt_el_correo">Introduce el correo electronico</string>
    <string name="edt_el_documento">Introduce el documento de identidad</string>
    <string name="edt_la_contraseña">Introduce la contraseña</string>
    <string name="btn_registralo">Registralo</string>
    <string name="txv_registra_nuevo_docente">Registra los datos del nuevo docente</string>
    <string name="title_activity_menus_usuario">menus_usuario</string>
    <string name="title_inicio">Inicio</string>
    <string name="title_pruebas">Pruebas</string>
    <string name="title_calificaciones">Calificaciones</string>
    <string name="title_perfil">Perfil</string>
    <string name="edtx_buscar" tools:ignore="TypographyEllipsis">Buscar...</string>
    <string name="edtx_tipos_de_datos">Tipos de datos</string>
    <string name="edtx_lorem_ipsum">lorem ipsum</string>
    <string name="txv_escoge_el_nivel_de_la_prueba">Escoge el nivel de la prueba</string>
    <string name="txv_puntaje_obtenido_en_cada_prueba">Puntaje obtenido en cada prueba</string>
    <string name="txv_prueba_nivel">PRUEBA NIVEL # 1</string>
    <string name="txv_cantidad_de_preguntas">Cantidad de preguntas:</string>
    <string name="txv_correctas">Correctas:</string>
    <string name="txv_incorrectas">Incorrectas:</string>
    <string name="txv_puntaje">Puntaje:</string>
    <string name="txv_nombre">Nombre:</string>
    <string name="txv_correo">Correo:</string>
    <string name="txv_ciudad">Documento:</string>
    <string name="btn_cambiar_contrasenia">Cambiar contraseña</string>
    <string name="btn_cambiar_foto_de_perfil">Cambiar foto de perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_nueva_entrada">Nueva entrada</string>
    <string name="btn_editar_entradas">Editar entradas</string>
    <string name="txv_pregunta_2">Pregunta # 2</string>
    <string name="txv_nivel">Nivel:</string>
    <string name="txv_texto">Texto:</string>
    <string name="txv_respuestas">Respuestas:</string>
    <string name="txv_correcta">Correcta:</string>
    <string name="btn_nueva_pregunta">Nueva pregunta</string>
    <string name="btn_editar_mis_preguntas">Editar mis preguntas</string>
    <string name="btn_aniadir_a_alguien_como_docente">Añadir a alguien como docente</string>
    <string name="txv_pregunta_1">Pregunta #1</string>
    <string name="btn_respuesta_a">A:</string>
    <string name="btn_respuesta_b">B:</string>
    <string name="btn_respuesta_c">C:</string>
    <string name="btn_respuesta_d">D:</string>
    <string name="btn_siguiente">Siguiente</string>
    <string name="txv_titulo">Titulo:</string>
    <string name="edtx_titulo">...</string>
    <string name="txv_descripcion">Descripcion:</string>
    <string name="btn_insertar_imagen">Insertar Imagen</string>
    <string name="btn_eliminar">Eliminar</string>
    <string name="btn_crear">Crear</string>
    <string name="txv_pregunta">Pregunta:</string>
    <string name="txv_respuesta_a">Respuesta A:</string>
    <string name="txv_respuesta_b">Respuesta B:</string>
    <string name="txv_respuesta_c">Respuesta C:</string>
    <string name="txv_respuesta_d">Respuesta D:</string>
    <string name="chb_a">A</string>
    <string name="chb_b">B</string>
    <string name="chb_c">C</string>
    <string name="chb_d">D</string>
    <string name="txv_datos_personales">Datos personales:</string>
</resources>