<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#531EA0"
    tools:context=".Inicio">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="309dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="167dp"
        android:layout_marginEnd="0dp"
        android:contentDescription="@string/ImagenAvionInicio"
        app:srcCompat="@drawable/icono_principal" />

    <Button
        android:layout_width="113dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="128dp"
        android:background="@drawable/custom_button"
        android:onClick="estudiante"
        android:text="@string/btn_estudiante_inicio"
        android:textColor="#0B0A0A"
        android:textSize="12sp"
        app:backgroundTint="@null" />

    <Button
        android:layout_width="113dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:background="@drawable/custom_button"
        android:text="@string/btn_docente_inicio"
        android:textColor="#0B0A0A"
        android:textSize="12sp"
        android:onClick="docente"
        app:backgroundTint="@null" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="211dp"
        android:text="@string/txv_inicio" />


</RelativeLayout>