<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EADCFA"
    tools:context=".NuevaPreguntaDocentesFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="712dp"
        android:backgroundTint="#7846CC">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/pruebas_bar"
            android:contentDescription="@string/ImagenNombreEducaPlay" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/custom_card"
        android:orientation="horizontal"
        android:padding="10dp">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txv_nivel"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/nivelnuevapregunta"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:ems="10"
            android:hint="@string/edtx_titulo"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="#000000"
            android:textColorHint="#333333"
            tools:ignore="DuplicateSpeakableTextCheck" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="180dp"
        android:background="@drawable/custom_card"
        android:orientation="horizontal"
        android:padding="10dp">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txv_pregunta"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/nuevapregunta"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:ems="10"
            android:hint="@string/edtx_titulo"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:textColor="#000000"
            android:textColorHint="#333333" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="310dp"
        android:paddingHorizontal="10dp"
        android:background="@drawable/custom_card"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txv_respuesta_a"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/respuesta1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:ems="10"
            android:hint="@string/edtx_titulo"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="#000000"
            android:textColorHint="#333333"
            tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="360dp"
        android:paddingHorizontal="10dp"
        android:background="@drawable/custom_card"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txv_respuesta_b"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/respuesta2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:ems="10"
            android:hint="@string/edtx_titulo"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="#000000"
            android:textColorHint="#333333"
            tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="410dp"
        android:paddingHorizontal="10dp"
        android:background="@drawable/custom_card"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txv_respuesta_c"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/respuesta3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:ems="10"
            android:hint="@string/edtx_titulo"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="#000000"
            android:textColorHint="#333333"
            tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="460dp"
        android:paddingHorizontal="10dp"
        android:background="@drawable/custom_card"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txv_respuesta_d"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/respuesta4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:ems="10"
            android:hint="@string/edtx_titulo"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="#000000"
            android:textColorHint="#333333"
            tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="234dp"
        android:text="@string/txv_correcta"
        android:textColor="#000000" />

    <CheckBox
        android:id="@+id/check_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="225dp"
        android:button="@drawable/custom_checkbox"
        android:padding="5dp"
        android:text="@string/chb_a"
        android:textColor="#000000"
        android:textSize="12sp" />

    <CheckBox
        android:id="@+id/check_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="140dp"
        android:layout_marginBottom="225dp"
        android:button="@drawable/custom_checkbox"
        android:padding="5dp"
        android:text="@string/chb_b"
        android:textColor="#000000"
        android:textSize="12sp" />

    <CheckBox
        android:id="@+id/check_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="200dp"
        android:layout_marginBottom="225dp"
        android:button="@drawable/custom_checkbox"
        android:padding="5dp"
        android:text="@string/chb_c"
        android:textColor="#000000"
        android:textSize="12sp" />

    <CheckBox
        android:id="@+id/check_d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="260dp"
        android:layout_marginBottom="225dp"
        android:button="@drawable/custom_checkbox"
        android:padding="5dp"
        android:text="@string/chb_d"
        android:textColor="#000000"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="90dp"
        android:contentDescription="@string/ImagenNombreEducaPlay"
        android:src="@android:drawable/ic_menu_gallery"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/button4"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="130dp"
        android:background="@drawable/custom_button_perfil"
        android:text="@string/btn_insertar_imagen"
        android:textColor="#FFFFFF"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/crearpregunta"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="127dp"
        android:layout_marginBottom="39dp"
        android:background="@drawable/custom_button_perfil"
        android:text="@string/btn_crear"
        android:textColor="#FFFFFF"
        tools:ignore="TextContrastCheck" />


</RelativeLayout>