<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EADCFA"
    tools:context=".PruebaEstudianteFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="712dp"
        android:backgroundTint="#7846CC">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/pruebas_bar"
            android:contentDescription="@string/ImagenNombreEducaPlay" />


    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:background="@drawable/custom_cardview_up_cal">

            <TextView
                android:id="@+id/numero_de_pregunta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/txv_pregunta_1"
                android:textColor="@color/black" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/custom_cardview_down"
            android:orientation="vertical">

            <TextView
                android:id="@+id/texto_de_preguntas"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/txv_texto"
                android:textColor="#757575" />

        </LinearLayout>

    </LinearLayout>

    <CheckBox
        android:id="@+id/respuestaA"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="313dp"
        android:background="@drawable/custom_card"
        android:paddingHorizontal="10dp"
        android:text="@string/btn_respuesta_a"
        android:textAlignment="textStart"
        android:textColor="#000000" />

    <CheckBox
        android:id="@+id/respuestaB"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="383dp"
        android:background="@drawable/custom_card"
        android:paddingHorizontal="10dp"
        android:text="@string/btn_respuesta_b"
        android:textAlignment="textStart"
        android:textColor="#000000" />


    <CheckBox
        android:id="@+id/respuestaD"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="453dp"
        android:background="@drawable/custom_card"
        android:paddingHorizontal="10dp"
        android:text="@string/btn_respuesta_c"
        android:textAlignment="textStart"
        android:textColor="#000000" />


    <CheckBox
        android:id="@+id/respuestaC"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="523dp"
        android:background="@drawable/custom_card"
        android:paddingHorizontal="10dp"
        android:text="@string/btn_respuesta_c"
        android:textAlignment="textStart"
        android:textColor="#000000" />


    <Button
        android:id="@+id/btn_siguiente_pregunta"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="77dp"
        android:background="@drawable/custom_button_perfil"
        android:text="@string/btn_siguiente"
        android:textColor="#ffffff"
        tools:ignore="TextContrastCheck" />


</RelativeLayout>